--- a/index.html
+++ b/index.html
@@ -104,10 +104,9 @@
         </td>
         <td class="secLACTextContent">
           <h3>About Us</h3>
-          <p> rajat Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          <p> Deepak Transport Agency, Shahjahanpur, is a logistic company, owned by Shri Shailendra Kumar Singh.
+            We have been servicing all across India,specially in states like Kolkata, U.P, Bihar and Gujarat.
+            We have been providing our service from last more than 2 decades.
           </p>
         </td>
       </tr>
@@ -124,10 +123,9 @@
       <tr>
         <td class="secRACTextContent">
           <h3>Services</h3>
-          <p> rajat Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          <p> We provide transportation services such as Full Truck Load, Part load, Rake Load.
+            These services are provided 24*7 all over India keeping in consideration safety and security
+            of the product and everyone involved. Transportation is done in most favourable and efficient way.
           </p>
         </td>
         <td class="secRACImgContent">
