--- a/index.html
+++ b/index.html
@@ -146,11 +146,9 @@
         </td>
         <td class="secLACTextContent">
           <h3>Braches</h3>
-          <p> rajat Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupida
-            tat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          <p> Braches of Deepak Transport are enrooted all over India.
+            We have more than 30 branches spread all over U.P., Bihar, West Bengal, Jharkhand, Gujrat and more.
+            Our branches are well known for their reputation in the market.
           </p>
         </td>
       </tr>
@@ -165,10 +163,11 @@
       <tr>
         <td class="secRACTextContent">
           <h3>Contact Us</h3>
-          <p> rajat Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          <p> We, at Deepak Transport Agency Shahjahanpur, are happy to serve you on call and mail around the clock.
+          </p>  
+          <p> Call us on: +91 9918420140 / +91 9140915815 
+          </p>
+          <p> Mail us on: dtaspn@gmail.com
           </p>
         </td>
         <td class="secRACImgContent">
