--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
   <!--Fourth Card ENDS-->
 
 
-  <!--Fiveth Card-->
+  <!--Fiveth Card
   <div class="secLeftAlignCard" id="Card5">
     <table>
       <tr>
@@ -197,7 +197,7 @@
       </tr>
     </table>
   </div>
-  <!--Fiveth Card ENDS-->
+    Fiveth Card ENDS-->
 
 
 
