--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <tr>
         <td class="secRACTextContent">
           <h3>Contact Us</h3>
-          <p> We, at Deepak Transport Agency Shahjahanpur, are happy to serve you on call and mail around the clock.
+          <p> We, at Deepak Transport Agency Shahjahanpur, are happy to serve you on call and on mail. We are available around the clock.
           </p>  
           <p> Call us on: +91 9918420140 / +91 9140915815 
           </p>
